<resources>
    <string name="app_name">Multiprotocol Telemetry</string>
    <string name="title_activity_telemetry_view">Telemetry Viewer</string>
    <string name="title_activity_telemetry_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_message_no_bt_selected">Bluetooth device not selected. Open Settings to select device?</string>
    <string name="dialog_title_no_bt_selected">Bluetooth device not configured</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="preference_file_key">com.tokyo_dom.mpmtelemetry.PREFERENCE_FILE_KEY</string>
    <string name="preference_bt_address">bluetoothAddress</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_connect">Connect</string>
    <!-- Preference Titles -->
    <string name="alarms_settings_header">Telemetry Alarms</string>
    <string name="connection_settings_header">Connection</string>
    <string name="scaling_settings_header">Telemetry Scaling</string>

    <!-- Connection Preferences -->
    <string name="address_title">Bluetooth device</string>
    <string name="address_dialog_title">Select bluetooth device</string>
    <string name="autoconnect_title">Connect automatically</string>
    <string name="autoconnect_summary_off">Manual connection</string>
    <string name="autoconnect_summary_on">Connect when app starts</string>

    <!-- Alarms Preferences -->
    <string name="v1alarm_title">Voltage 1 alarm</string>
    <string name="v2alarm_title">Voltage 2 alarm</string>
    <string name="voltagealarmval_title">Voltage to trigger alarm</string>
    <string name="rssialarm_title">RSSI alarm</string>
    <string name="signalalarmval_title">RSSI level to trigger alarm</string>
    <string name="txrssialarm_title">Transmitter RSSI alarm</string>
    <string name="connectionalarm_title">Bluetooth Connected/Disconnected</string>
    <string name="lqialarm_title">Link Quality Alarm</string>
    <string name="lqialarmval_title">LQI level to trigger alarm</string>
    <string name="txlqialarm_title">Transmitter Link Quality alarm</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="language_title">Alarm language</string>
    <string name="language_dialog_title">Select language for spoken alarms</string>
    <string name="action_connection">Disconnect</string>
    <string name="action_disconnect">Connect</string>
    <string name="action_connect">Connect</string>

</resources>